--- a/01gy_cpp/01gy_cpp.tex
+++ b/01gy_cpp/01gy_cpp.tex
@@ -107,7 +107,7 @@
 		\begin{tikzpicture}
 		\tikzstyle{Node} = [rectangle, text width=5mm, minimum height=5mm]
 		\tikzstyle{Token} = [rectangle, minimum height=5mm]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
+		\tikzstyle{arrow} = [->,>=stealth]
 		
 		\node (int) [Node, text = green] {\texttt{int}};
 		\node (main) [Node, right = 0mm of int, text = red] {\texttt{main}};
@@ -139,6 +139,7 @@
 		\draw[arrow] (punctuator) -- (rightBracket);
 		\draw[arrow] (punctuator) -- (semicolon2);
 		\draw[arrow] (identifier) -- (std1);
+		\draw[arrow] (identifier) -- (main);
 		\end{tikzpicture}
 	\end{figure}
 	\subsection{Aritmetikai konverziók}
